samples/_failures_safe/1761558001_b0de75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9450db0b.c: In function ‘main’:
./samples/SAFE/__tmp_9450db0b.c:147:8: error: expected ‘;’ at end of input
  147 |     dfs
      |        ^
      |        ;
./samples/SAFE/__tmp_9450db0b.c:147:5: error: expected declaration or statement at end of input
  147 |     dfs
      |     ^~~
